kustomize/matrix-conduit/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matrix
  labels:
    app.kubernetes.io/name: matrix-conduit
    app.kubernetes.io/instance: matrix-conduit
    app.kubernetes.io/part-of: matrix-conduit
    app.kubernetes.io/managed-by: flux
