kustomize/matrix-conduit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-conduit
  namespace: matrix
  labels:
    app.kubernetes.io/name: matrix-conduit
    app.kubernetes.io/instance: matrix-conduit
    app.kubernetes.io/version: "v0.10.13"
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: matrix-conduit
    app.kubernetes.io/managed-by: flux
  annotations:
    description: "Matrix-Homeserver (Conduit) Deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix-conduit
      app.kubernetes.io/name: matrix-conduit
      app.kubernetes.io/instance: matrix-conduit
  template:
    metadata:
      labels:
        app: matrix-conduit
        app.kubernetes.io/name: matrix-conduit
        app.kubernetes.io/instance: matrix-conduit
        app.kubernetes.io/version: "v0.10.13"
        app.kubernetes.io/component: application
        app.kubernetes.io/part-of: matrix-conduit
        app.kubernetes.io/managed-by: flux
    spec:
      containers:
      - name: matrix-conduit
        image: matrixconduit/matrix-conduit:v0.10.13
        ports:
        - name: http
          containerPort: 6167
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/conduit
          name: matrix-conduit-storage
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1Gi
      volumes:
      - name: matrix-conduit-storage
        persistentVolumeClaim:
          claimName: matrix-conduit-storage
